--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>Magazine Portfolio</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
+    <script src="../src/App.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
